# ComfyUI-ResizeToCanvasSize

./: .gitignore  CHANGELOG.md  LICENSE  README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
examples/: ResizeToCanvasSize_Example_Workflow.json
js/: anchor_widget.js
web/js/: anchor_widget.js
